--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en" class="root">
   <head>
-    <title>8192px - A collaborative pixel canvas that grows over time</title>
+    <title>Compix - Derpzy.Ml</title>
     <link rel="stylesheet" href="style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>.async-hide { opacity: 0 !important} </style>
