--- a/public/index.html
+++ b/public/index.html
@@ -36,17 +36,21 @@ document.addEventListener('dblclick', function(event) {
     </script>
   </head>
   <body id="container" class="container">
-  <p>Desktop:
+  <p> 
+<br>  Desktop:
 <br> 
-<br>	- Click and drag to pan.
-<br>	- Shift/Control click to zoom.
-<br>	- Double click to place a pixel.
+<br>    - Click and drag to pan.
+<br>    - Shift/Control click to zoom.
+<br>    - Double click to place a pixel.
 <br> 
-<br>Mobile:
+<br> Mobile:
+<br>  
+<br>   	- Drag to pan
+<br>   	- Pinch to zoom.
+<br>   	- Double tap to place a pixel.
 <br> 
-<br>	- Drag to pan
-<br>	- Pinch to zoom.
-<br>	- Double tap to place a pixel.</p>
+<br>This canvas will be reset on the first <br>of every month. High-Res images of <br>the canvas will be available on twitter @HugsToYou.
+<br> </p>
     <main id="content" class="content">
       <noscript>
         <img class="viewport" src="viewport.png" width="100%" height="100%"/>
