--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@ document.addEventListener('dblclick', function(event) {
   </head>
   <body id="container" class="container">
   <p> 
-<br>  Desktop:
+  Desktop:
 <br> 
 <br>    - Click and drag to pan.
 <br>    - Shift/Control click to zoom.
