--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="root">
   <head>
   <link href='//fonts.googleapis.com/css?family=Sofia' rel='stylesheet'>
-    <title>Compix - Derpzy.Ml</title>
+    <title>Compix.Ink</title>
     <link rel="stylesheet" href="style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>.async-hide { opacity: 0 !important} 
