--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
   <link href='//fonts.googleapis.com/css?family=Sofia' rel='stylesheet'>
     <title>Compix.Ink - Creating Masterpieces 1 Pixel At A Time</title>
     <link rel="stylesheet" href="style.css" />
+	<link rel="shortcut icon"
+ href="favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Compix.Ink is a collabrative pixel art board. However, instead of drawing brilliant paintings only to be scrawled over with some outdated meme, you only paint one pixel at a time.">
     <style>.async-hide { opacity: 0 !important} 
